Updating index to remove the hidden class from hints div, and instead make it part of the CSS for the hints class using display:none. Also updating script to use the .toggle() function in jQuery with an animation speed, instead of doing a check of .hasClass() and then doing either .addClass('hidden') or .removeClass(...) to toggle visibility of the hints. Added a TODO for the prevention of inserting redundant decimal points

--- a/style.css
+++ b/style.css
@@ -41,12 +41,14 @@ body, html {
   border-radius: 2px;
 }
 
+/* Initially hidden */
 .hints {
   margin-top: 2px;
   background-color: #51829D;
   color: #E4F6F3;
   border-radius: 5px;
   padding: 1px;
+  display: none;
 }
 
 .hints h2, li{
